[package]
name = "balancebeam"
version = "0.1.0"
authors = ["Ryan Eberhardt <reberhardt7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
httparse = "1.3"
http = "0.2"
log = "0.4"
env_logger = "0.7"
pretty_env_logger = "0.4"
tokio = { version = "1.19.2", features = ["full"] }
rand = "0.7"
parking_lot = "0.10"
crossbeam-channel = "0.4.2"
threadpool = "1.8.1"

[dev-dependencies]
nix = "0.17"
hyper = { version="0.14.19", features = ["full"] }
reqwest = "0.11.11"
async-trait = "0.1"
